montysolr/src/main/java/org/apache/lucene/queryparser/flexible/aqp/parser/StandardLuceneGrammarParser.java
// $ANTLR 3.5.2 /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g 2016-11-02 17:01:06

  package org.apache.lucene.queryparser.flexible.aqp.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class StandardLuceneGrammarParser extends UnforgivingParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMPER", "AND", "ATOM", "BOOST", 
		"CARAT", "CLAUSE", "COLON", "DATE_TOKEN", "DQUOTE", "ESC_CHAR", "FIELD", 
		"FUZZY", "INT", "LBRACK", "LCURLY", "LPAREN", "MINUS", "MODIFIER", "NOT", 
		"NUMBER", "OPERATOR", "OR", "PHRASE", "PHRASE_ANYTHING", "PLUS", "QANYTHING", 
		"QDATE", "QMARK", "QNORMAL", "QPHRASE", "QPHRASETRUNC", "QRANGEEX", "QRANGEIN", 
		"QTRUNCATED", "RBRACK", "RCURLY", "RPAREN", "SQUOTE", "STAR", "TERM_CHAR", 
		"TERM_NORMAL", "TERM_START_CHAR", "TERM_TRUNCATED", "TILDE", "TMODIFIER", 
		"TO", "VBAR", "WS"
	};
	public static final int EOF=-1;
	public static final int AMPER=4;
	public static final int AND=5;
	public static final int ATOM=6;
	public static final int BOOST=7;
	public static final int CARAT=8;
	public static final int CLAUSE=9;
	public static final int COLON=10;
	public static final int DATE_TOKEN=11;
	public static final int DQUOTE=12;
	public static final int ESC_CHAR=13;
	public static final int FIELD=14;
	public static final int FUZZY=15;
	public static final int INT=16;
	public static final int LBRACK=17;
	public static final int LCURLY=18;
	public static final int LPAREN=19;
	public static final int MINUS=20;
	public static final int MODIFIER=21;
	public static final int NOT=22;
	public static final int NUMBER=23;
	public static final int OPERATOR=24;
	public static final int OR=25;
	public static final int PHRASE=26;
	public static final int PHRASE_ANYTHING=27;
	public static final int PLUS=28;
	public static final int QANYTHING=29;
	public static final int QDATE=30;
	public static final int QMARK=31;
	public static final int QNORMAL=32;
	public static final int QPHRASE=33;
	public static final int QPHRASETRUNC=34;
	public static final int QRANGEEX=35;
	public static final int QRANGEIN=36;
	public static final int QTRUNCATED=37;
	public static final int RBRACK=38;
	public static final int RCURLY=39;
	public static final int RPAREN=40;
	public static final int SQUOTE=41;
	public static final int STAR=42;
	public static final int TERM_CHAR=43;
	public static final int TERM_NORMAL=44;
	public static final int TERM_START_CHAR=45;
	public static final int TERM_TRUNCATED=46;
	public static final int TILDE=47;
	public static final int TMODIFIER=48;
	public static final int TO=49;
	public static final int VBAR=50;
	public static final int WS=51;

	// delegates
	public UnforgivingParser[] getDelegates() {
		return new UnforgivingParser[] {};
	}

	// delegators


	public StandardLuceneGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public StandardLuceneGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return StandardLuceneGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g"; }


	public static class mainQ_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mainQ"
	// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:103:1: mainQ : ( clauseOr )+ EOF -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) ;
	public final StandardLuceneGrammarParser.mainQ_return mainQ() throws RecognitionException {
		StandardLuceneGrammarParser.mainQ_return retval = new StandardLuceneGrammarParser.mainQ_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope clauseOr1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_clauseOr=new RewriteRuleSubtreeStream(adaptor,"rule clauseOr");

		try {
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:103:7: ( ( clauseOr )+ EOF -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) )
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:104:2: ( clauseOr )+ EOF
			{
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:104:2: ( clauseOr )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= LBRACK && LA1_0 <= MINUS)||LA1_0==NUMBER||(LA1_0 >= PHRASE && LA1_0 <= PLUS)||LA1_0==QMARK||LA1_0==STAR||LA1_0==TERM_NORMAL||LA1_0==TERM_TRUNCATED) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:104:2: clauseOr
					{
					pushFollow(FOLLOW_clauseOr_in_mainQ212);
					clauseOr1=clauseOr();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_clauseOr.add(clauseOr1.getTree());
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_mainQ215); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: clauseOr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 104:16: -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
			{
				// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:104:19: ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPERATOR, "DEFOP"), root_1);
				if ( !(stream_clauseOr.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_clauseOr.hasNext() ) {
					adaptor.addChild(root_1, stream_clauseOr.nextTree());
				}
				stream_clauseOr.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mainQ"


	public static class clauseOr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "clauseOr"
	// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:108:1: clauseOr : (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* ;
	public final StandardLuceneGrammarParser.clauseOr_return clauseOr() throws RecognitionException {
		StandardLuceneGrammarParser.clauseOr_return retval = new StandardLuceneGrammarParser.clauseOr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope first =null;
		ParserRuleReturnScope others =null;
		ParserRuleReturnScope or3 =null;

		RewriteRuleSubtreeStream stream_or=new RewriteRuleSubtreeStream(adaptor,"rule or");
		RewriteRuleSubtreeStream stream_clauseAnd=new RewriteRuleSubtreeStream(adaptor,"rule clauseAnd");

		try {
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:3: ( (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* )
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:5: (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
			{
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:5: (first= clauseAnd -> $first)
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:6: first= clauseAnd
			{
			pushFollow(FOLLOW_clauseAnd_in_clauseOr246);
			first=clauseAnd();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_clauseAnd.add(first.getTree());
			// AST REWRITE
			// elements: first
			// token labels: 
			// rule labels: first, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 109:22: -> $first
			{
				adaptor.addChild(root_0, stream_first.nextTree());
			}


			retval.tree = root_0;
			}

			}

			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:33: ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==OR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:34: or others= clauseAnd
					{
					pushFollow(FOLLOW_or_in_clauseOr255);
					or3=or();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_or.add(or3.getTree());
					pushFollow(FOLLOW_clauseAnd_in_clauseOr259);
					others=clauseAnd();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_clauseAnd.add(others.getTree());
					// AST REWRITE
					// elements: clauseAnd
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 109:54: -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
					{
						// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:109:57: ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPERATOR, "OR"), root_1);
						if ( !(stream_clauseAnd.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_clauseAnd.hasNext() ) {
							adaptor.addChild(root_1, stream_clauseAnd.nextTree());
						}
						stream_clauseAnd.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "clauseOr"


	public static class clauseAnd_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "clauseAnd"
	// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:112:1: clauseAnd : (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )* ;
	public final StandardLuceneGrammarParser.clauseAnd_return clauseAnd() throws RecognitionException {
		StandardLuceneGrammarParser.clauseAnd_return retval = new StandardLuceneGrammarParser.clauseAnd_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope first =null;
		ParserRuleReturnScope others =null;
		ParserRuleReturnScope and4 =null;

		RewriteRuleSubtreeStream stream_and=new RewriteRuleSubtreeStream(adaptor,"rule and");
		RewriteRuleSubtreeStream stream_clauseNot=new RewriteRuleSubtreeStream(adaptor,"rule clauseNot");

		try {
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:3: ( (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )* )
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:5: (first= clauseNot -> $first) ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )*
			{
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:5: (first= clauseNot -> $first)
			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:6: first= clauseNot
			{
			pushFollow(FOLLOW_clauseNot_in_clauseAnd288);
			first=clauseNot();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_clauseNot.add(first.getTree());
			// AST REWRITE
			// elements: first
			// token labels: 
			// rule labels: first, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 113:23: -> $first
			{
				adaptor.addChild(root_0, stream_first.nextTree());
			}


			retval.tree = root_0;
			}

			}

			// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:34: ( and others= clauseNot -> ^( OPERATOR[\"AND\"] ( clauseNot )+ ) )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==AND) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:35: and others= clauseNot
					{
					pushFollow(FOLLOW_and_in_clauseAnd298);
					and4=and();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_and.add(and4.getTree());
					pushFollow(FOLLOW_clauseNot_in_clauseAnd302);
					others=clauseNot();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_clauseNot.add(others.getTree());
					// AST REWRITE
					// elements: clauseNot
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 113:56: -> ^( OPERATOR[\"AND\"] ( clauseNot )+ )
					{
						// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:113:59: ^( OPERATOR[\"AND\"] ( clauseNot )+ )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPERATOR, "AND"), root_1);
						if ( !(stream_clauseNot.hasNext()) ) {
							throw new RewriteEarlyExitException();
						}
						while ( stream_clauseNot.hasNext() ) {
							adaptor.addChild(root_1, stream_clauseNot.nextTree());
						}
						stream_clauseNot.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "clauseAnd"


	public static class clauseNot_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "clauseNot"
	// /dvt/workspace2/montysolr/contrib/antlrqueryparser/grammars/StandardLuceneGrammar.g:116:1: clauseNot : (first= clauseBasic -> $first) ( not others= clauseBasic -> ^( OPERATOR[\"NOT\"] ( clauseBasic )+ ) )* ;
	public final StandardLuceneGrammarParser.clauseNot_return clauseNot() throws RecognitionException {
		StandardLuceneGrammarParser.clauseNot_return retval = new StandardLuceneGrammarParser.clauseNot_return();
		retval.start = input.LT(1);
